--- a/webassets/guide.css
+++ b/webassets/guide.css
@@ -1,12 +1,46 @@
-@font-face{font-family:Minecraftia;src:url("mc.ttf");}
-html{background-color:#000000;color:#ffffff;font-family:Minecraftia;font-size:95%}
-p{font-size:130%;}
-h1{color:#9988ff;font-size:250%;}
-h2{color:#9988ff;font-size:200%;}
-a{color:#aa9900;text-decoration:none;}
-a:hover{color:#ffee00;}
-.arial{font-family:Arial,sans-serif;}
-.smallText{color:#999999;font-size:50%;}
-.greyLink{color:#999999;}
-.greyLink:hover{color:#bbbbbb;}
-.banner{max-width:100%;height:auto;max-height:100%;}
+@font-face{
+  font-family: Minecraftia;
+  src: url("mc.ttf");
+}
+html{
+  background-color: #000000;
+  color: #ffffff;
+  font-family: Minecraftia;
+  font-size: 95%
+}
+p{
+  font-size: 130%;
+}
+h1{
+  color: #9988ff;
+  font-size: 250%;
+}
+h2{
+  color: #9988ff;
+  font-size: 200%;
+}
+a{
+  color: #aa9900;
+  text-decoration: none;
+}
+a:hover{
+  color: #ffee00;
+}
+.arial{
+  font-family: Arial, sans-serif;
+}
+.smallText{
+  color: #999999;
+  font-size: 50%;
+}
+.greyLink{
+  color: #999999;
+}
+.greyLink:hover{
+  color: #bbbbbb;
+}
+.banner{
+  max-width: 100%;
+  height: auto;
+  max-height: 100%;
+}
