--- a/webassets/guide.css
+++ b/webassets/guide.css
@@ -16,10 +16,24 @@ h1{
   font-size: 250%;
   display: inline-flex;
 }
+details>summary::marker{
+  content: "+ ";
+  font-family: Minecraftia;
+  color: #9988ff;
+  font-size: 250%;
+  display: inline-flex;
+}
+details[open]>summary::marker{
+  content: "- ";
+  font-family: Minecraftia;
+  color: #9988ff;
+  font-size: 250%;
+  display: inline-flex;
+}
 h2{
   color: #9988ff;
   font-size: 200%;
-  display: inline-flex;
+  display: inline-flex;\
 }
 a{
   color: #aa9900;
@@ -45,18 +59,4 @@ a:hover{
   max-width: 100%;
   height: auto;
   max-height: 100%;
-}
-details>summary::marker{
-  content: "+ ";
-  font-family: Minecraftia;
-  color: #9988ff;
-  font-size: 250%;
-  display: inline-flex;
-}
-details[open]>summary::marker{
-  content: "- ";
-  font-family: Minecraftia;
-  color: #9988ff;
-  font-size: 250%;
-  display: inline-flex;
 }
